update profile for JPA service, test active profile by application.properties

--- a/clinic-web/src/main/resources/application.properties
+++ b/clinic-web/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.messages.basename=messages/messages
 spring.banner.image.location=palm.png
 spring.banner.image.width=50
 spring.banner.image.height=20
+
+
+spring.profiles.active=springdatajpa
