--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /build/www/**
 /src/test/javascript/coverage/
 /src/test/javascript/PhantomJS*/
+clinic-data/target/
+clinic-web/target/
 
 ######################
 # Node
